// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleDetailGeneral /> renders correctly with normal reads and single read file 1`] = `
<div>
  <table
    className="table table-bordered"
  >
    <tbody>
      <tr
        key="host"
      >
        <th
          className="col-xs-4 text-capitalize"
        >
          host
        </th>
        <td
          className="col-xs-8"
        >
          test-host
        </td>
      </tr>
      <tr
        key="isolate"
      >
        <th
          className="col-xs-4 text-capitalize"
        >
          isolate
        </th>
        <td
          className="col-xs-8"
        >
          test-isolate
        </td>
      </tr>
      <tr
        key="locale"
      >
        <th
          className="col-xs-4 text-capitalize"
        >
          locale
        </th>
        <td
          className="col-xs-8"
        >
          test-locale
        </td>
      </tr>
      <Connect(IDRowComponent)
        id="123abc"
      />
    </tbody>
  </table>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Library
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Encoding
          </th>
          <td
            className="col-xs-8"
          >
            test
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            100.0
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            0 - 50 - 100
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            50.0 %
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Subtraction
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Host
          </th>
          <td
            className="col-xs-8"
          >
            <Link
              replace={false}
              to="/subtraction/test-subtraction"
            >
              test-subtraction
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> renders correctly with sRNA reads and paired read files 1`] = `
<div>
  <table
    className="table table-bordered"
  >
    <tbody>
      <tr
        key="host"
      >
        <th
          className="col-xs-4 text-capitalize"
        >
          host
        </th>
        <td
          className="col-xs-8"
        >
          test-host
        </td>
      </tr>
      <tr
        key="isolate"
      >
        <th
          className="col-xs-4 text-capitalize"
        >
          isolate
        </th>
        <td
          className="col-xs-8"
        >
          test-isolate
        </td>
      </tr>
      <tr
        key="locale"
      >
        <th
          className="col-xs-4 text-capitalize"
        >
          locale
        </th>
        <td
          className="col-xs-8"
        >
          test-locale
        </td>
      </tr>
      <Connect(IDRowComponent)
        id="123abc"
      />
    </tbody>
  </table>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Library
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Encoding
          </th>
          <td
            className="col-xs-8"
          >
            test
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            100.0
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            sRNA
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            0 - 50 - 100
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            50.0 %
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Uncontrolled(Panel)>
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      Subtraction
    </PanelHeading>
    <Table
      bordered={true}
      bsClass="table"
      condensed={false}
      hover={false}
      responsive={false}
      striped={false}
    >
      <tbody>
        <tr>
          <th
            className="col-xs-4"
          >
            Host
          </th>
          <td
            className="col-xs-8"
          >
            <Link
              replace={false}
              to="/subtraction/test-subtraction"
            >
              test-subtraction
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Uncontrolled(Panel)>
  <Connect(EditSample) />
</div>
`;
